added fine stats flag

--- a/main.ipynb
+++ b/main.ipynb
@@ -98,7 +98,8 @@
    "source": [
     "# [5]\n",
     "target_T = 250\n",
-    "simul[\"target_T\"] = target_T"
+    "simul[\"target_T\"] = target_T\n",
+    "simul[\"enable_fine_stats\"] = 0"
    ]
   },
   {
@@ -178,9 +179,7 @@
     "        has_beg = True\n",
     "        simul[\"target_T\"] = -1\n",
     "        simul[\"well_k\"] = 0\n",
-    "        simul.reset_series(\"f_autocor_xx\")\n",
-    "        simul.reset_series(\"f_autocor_xy\")\n",
-    "        simul.reset_series(\"f_autocor_yy\")\n",
+    "        simul[\"enable_fine_stats\"] = 1\n",
     "        simul.reset_series(\"vdist\")\n",
     "    if t > t_end and not has_end:\n",
     "        flag_end = True\n",
