theoretical 2d tau with poissonian reset

--- a/langevin-survival/langevin-survival-free-2d.ipynb
+++ b/langevin-survival/langevin-survival-free-2d.ipynb
@@ -120,7 +120,7 @@
     "plt.figure(figsize=(7,5))\n",
     "\n",
     "L_sample = simul['survdist_time_pos']\n",
-    "survdist_th = pft_2d_free_survival(L_sample, t, D, Rtol, σ, regularize=True, split_domain=True)\n",
+    "survdist_th = fpt_2d_free_survival(L_sample, t, D, Rtol, σ, regularize=True, split_domain=True)\n",
     "plt.plot(t, survdist_th, label=r\"theoretical\", color='black', linestyle='dashed', lw=3)\n",
     "\n",
     "plt.plot(t, survdist_time, label=r\"measured\")\n",
@@ -177,7 +177,7 @@
     "plt.figure(figsize=(7,5))\n",
     "\n",
     "t_sample = simul['survdist_pos_time']\n",
-    "survdist_th = pft_2d_free_survival(L, t_sample, D, Rtol, σ, regularize=True, split_domain=False)\n",
+    "survdist_th = fpt_2d_free_survival(L, t_sample, D, Rtol, σ, regularize=True, split_domain=False)\n",
     "plt.plot(L, survdist_th, label=r\"theoretical\", color='black', linestyle='dashed', lw=3)\n",
     "\n",
     "plt.plot(L, survdist_pos, label=r\"measured\")\n",
