2D survival simulation with reset : only one point per simulation; automated notebook

--- a/langevin-mfpt/langevin-ft-automated.ipynb
+++ b/langevin-mfpt/langevin-ft-automated.ipynb
@@ -269,6 +269,8 @@
     "    mfpt_th = L**2/(4*D)*th_tau_2d(b,c,a)\n",
     "mfpt = np.mean(first_times)\n",
     "\n",
+    "print(\"number of FPT events ≤ 2·Δt : {:.2f}%\".format( np.sum(first_times < 2.1*Δt) / len(first_times) *100 ))\n",
+    "\n",
     "def fpt_distrib_title ():\n",
     "    plt.xlabel(\"first passage time\")\n",
     "    if reset_type == 'poisson':\n",
