cleanup and minor modifs

--- a/langevin-mfpt/langevin-ft-automated-automated.ipynb
+++ b/langevin-mfpt/langevin-ft-automated-automated.ipynb
@@ -30,9 +30,9 @@
    "outputs": [],
    "source": [
     "# [2]\n",
-    "reset_type = 'poisson'\n",
-    "path = \"data-2d-poisson-x0var-ter/\"\n",
-    "i_beg = 800\n",
+    "reset_type = 'per'\n",
+    "path = \"data-2d-periodical-x0var/\"\n",
+    "i_beg = 0\n",
     "param_i = 0"
    ]
   },
@@ -45,8 +45,8 @@
     "# [3]\n",
     "simul = pysimul.PySimul()\n",
     "simul['D'] = D = 1\n",
-    "simul['reset_rate'] = α = [140**2, 100**2, 70**2, 50**2, 30**2][param_i]\n",
-    "#simul['reset_period'] = rT = 0.002\n",
+    "#simul['reset_rate'] = α = [140**2, 100**2, 70**2, 50**2, 30**2][param_i]\n",
+    "simul['reset_period'] = rT = [0.005, 0.002, 0.001, 0.0007, 0.0004, 0.0002, 0.0001][param_i]\n",
     "simul['x0sigma'] = σ = 0.2/6\n",
     "simul['2D-Rtol'] = Rtol = 0.1\n",
     "simul.start()\n",
@@ -55,7 +55,7 @@
     "    th_tau_2d = fpt_2d_poisson_tau\n",
     "    th_c = lambda L: fpt_poisson_c(α, D, L)\n",
     "elif reset_type == 'per':\n",
-    "    th_tau_2d = None\n",
+    "    th_tau_2d = fpt_2d_periodical_tau\n",
     "    th_c = lambda L: fpt_periodic_c(rT, D, L)\n",
     "param_i += 1\n",
     "ended = False"
@@ -162,9 +162,10 @@
     "mfpt_th = Rtarg**2/(4*D)*th_tau_2d(b,c,a)\n",
     "\n",
     "plt.figure(figsize=(10,4))\n",
-    "fpt_max = 5*mfpt_th\n",
+    "fpt_max = 5*mfpt\n",
     "plt.hist(first_times, bins=100, range=(0,fpt_max), weights=100/fpt_max*np.ones(n_traj)/n_traj, label=\"distribution ({} traj.)\".format(n_traj))\n",
     "plt.axvline(x=mfpt, color='purple', label=\"MFPT = {:.3f}\".format(mfpt))\n",
+    "plt.axvline(x=mfpt_th, color='black', label=\"th. MFPT = {:.3f}\".format(mfpt_th))\n",
     "plt.yscale('log')\n",
     "plt.xlabel(\"first passage time\")\n",
     "if reset_type == 'poisson':\n",
@@ -211,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.4"
   }
  },
  "nbformat": 4,
