--- a/dynmol-diffus-results/dynmol_diffus_analysis.ipynb
+++ b/dynmol-diffus-results/dynmol_diffus_analysis.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "plt.rcParams['savefig.bbox'] = 'tight'\n",
     "import csv, sys, time, os, re\n",
     "import scipy.optimize\n",
     "from math import *\n",
@@ -678,6 +679,24 @@
    "metadata": {},
    "source": [
     "Queue qui semble être en $\\tau^{-2}$. L'intégrale semble tendre vers $0$, et pas plateau. C'est normal, non ? Car du point de vue de l'équation de Langevin, il s'agit de la somme de la force aléatoire et de la force de freinage."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#plt.figure(figsize=(16,5))\n",
+    "#df = pd.read_csv(\"remi8/cfff_mean.csv\", sep=',')\n",
+    "#plt.plot(df['tau'], df['c_fx_fx'], label=r\"$\\langle\\langle f_x(t) \\cdot f_x(t+\\delta t) \\rangle_t\\rangle_\\operatorname{ens}$\")\n",
+    "#plt.plot(df['tau'], df['c_fx_fy'], label=r\"$\\langle\\langle f_x(t) \\cdot f_y(t+\\delta t) \\rangle_t\\rangle_\\operatorname{ens}$\")\n",
+    "#plt.plot(df['tau'], df['c_fy_fy'], label=r\"$\\langle\\langle f_y(t) \\cdot f_y(t+\\delta t) \\rangle_t\\rangle_\\operatorname{ens}$\")\n",
+    "#plt.legend()\n",
+    "#plt.xlim((0,0.004))\n",
+    "#plt.xlabel(r\"$\\delta t$\")\n",
+    "#plt.ylabel(r\"$C_{ff}$\")\n",
+    "#plt.savefig(\"cff.pdf\")"
    ]
   },
   {
