--- a/main.ipynb
+++ b/main.ipynb
@@ -19,6 +19,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "plt.rcParams['savefig.bbox'] = 'tight'\n",
     "import pysimul\n",
     "import os\n",
     "import csv"
@@ -938,7 +939,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
