--- a/dynmol-diffus-results/res-diffus.ipynb
+++ b/dynmol-diffus-results/res-diffus.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "plt.rcParams['savefig.bbox'] = 'tight'\n",
     "import csv, sys, time, os, re\n",
     "import scipy.optimize\n",
     "from math import *"
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
