--- a/exp-data-diffus-analysis.ipynb
+++ b/exp-data-diffus-analysis.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Experimental data analysis\n",
+    "\n",
+    "Reads raw QPD $(a,b,c,d,\\text{trap})$ files, recovers trap $\\sigma_x$ and $\\sigma_y$, free diffusion constant $D$, and eventually corrects $y$ for $D_y \\neq D_x$. Then generate $(x,y)$ file for MFPT computing with `exp-ft-automated.ipynb`.\n",
+    "\n",
+    "For checking : can also use simulated trajectories with periodical trapping reset using Langevin's equation, from `langevin-generate.cpp` with `#define RESET_WITH_TRAPPING`, `#define ENABLE_PERIODICAL_RESET` and `#define SPLIT_FILES`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
