--- a/langevin-mfpt/ft-simplified2d-automated.ipynb
+++ b/langevin-mfpt/ft-simplified2d-automated.ipynb
@@ -115,10 +115,10 @@
    "source": [
     "# [7]\n",
     "simul.explicit_lock()\n",
-    "Rtarg = simul['first_times_xtarg'][0]\n",
+    "Rtarg = simul['first_times_xtarg']\n",
     "Δt = simul['Delta_t']\n",
     "\n",
-    "first_times = simul['first_times-0']\n",
+    "first_times = simul['first_times']\n",
     "n_traj = len(first_times)\n",
     "mfpt = np.mean(first_times)\n",
     "\n",
@@ -212,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.4"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
